; ModuleID = '/home/carl/AnghaBench/reactos/modules/rostests/winetests/ntdll/extr_info.c_test_query_module.c'
source_filename = "/home/carl/AnghaBench/reactos/modules/rostests/winetests/ntdll/extr_info.c_test_query_module.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_8__ = type { i64, %struct.TYPE_9__* }
%struct.TYPE_9__ = type { i64 }

@SystemModuleInformation = common dso_local global i32 0, align 4
@STATUS_INFO_LENGTH_MISMATCH = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [48 x i8] c"Expected STATUS_INFO_LENGTH_MISMATCH, got %08x\0A\00", align 1
@.str.1 = private unnamed_addr constant [51 x i8] c"Expected a ReturnLength to show the needed length\0A\00", align 1
@STATUS_SUCCESS = common dso_local global i64 0, align 8
@.str.2 = private unnamed_addr constant [35 x i8] c"Expected STATUS_SUCCESS, got %08x\0A\00", align 1
@.str.3 = private unnamed_addr constant [36 x i8] c"Expected some modules to be loaded\0A\00", align 1
@.str.4 = private unnamed_addr constant [32 x i8] c"Id (%d) should have matched %u\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void ()* @test_query_module to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @test_query_module() #0 {
  %1 = alloca i64, align 8
  %2 = alloca i64, align 8
  %3 = alloca i64, align 8
  %4 = alloca i64, align 8
  %5 = alloca i64, align 8
  %6 = alloca %struct.TYPE_8__*, align 8
  %7 = alloca %struct.TYPE_9__*, align 8
  store i64 16, i64* %5, align 8
  %8 = call i32 (...) @GetProcessHeap()
  %9 = load i64, i64* %5, align 8
  %10 = call %struct.TYPE_8__* @HeapAlloc(i32 %8, i32 0, i64 %9)
  store %struct.TYPE_8__* %10, %struct.TYPE_8__** %6, align 8
  %11 = load i32, i32* @SystemModuleInformation, align 4
  %12 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %13 = call i64 @pNtQuerySystemInformation(i32 %11, %struct.TYPE_8__* %12, i64 0, i64* %2)
  store i64 %13, i64* %1, align 8
  %14 = load i64, i64* %1, align 8
  %15 = load i64, i64* @STATUS_INFO_LENGTH_MISMATCH, align 8
  %16 = icmp eq i64 %14, %15
  %17 = zext i1 %16 to i32
  %18 = load i64, i64* %1, align 8
  %19 = call i32 (i32, i8*, ...) @ok(i32 %17, i8* getelementptr inbounds ([48 x i8], [48 x i8]* @.str, i64 0, i64 0), i64 %18)
  %20 = load i64, i64* %2, align 8
  %21 = icmp sgt i64 %20, 0
  %22 = zext i1 %21 to i32
  %23 = call i32 (i32, i8*, ...) @ok(i32 %22, i8* getelementptr inbounds ([51 x i8], [51 x i8]* @.str.1, i64 0, i64 0))
  %24 = load i64, i64* %2, align 8
  store i64 %24, i64* %5, align 8
  %25 = call i32 (...) @GetProcessHeap()
  %26 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %27 = load i64, i64* %5, align 8
  %28 = call %struct.TYPE_8__* @HeapReAlloc(i32 %25, i32 0, %struct.TYPE_8__* %26, i64 %27)
  store %struct.TYPE_8__* %28, %struct.TYPE_8__** %6, align 8
  %29 = load i32, i32* @SystemModuleInformation, align 4
  %30 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %31 = load i64, i64* %5, align 8
  %32 = call i64 @pNtQuerySystemInformation(i32 %29, %struct.TYPE_8__* %30, i64 %31, i64* %2)
  store i64 %32, i64* %1, align 8
  %33 = load i64, i64* %1, align 8
  %34 = load i64, i64* @STATUS_SUCCESS, align 8
  %35 = icmp eq i64 %33, %34
  %36 = zext i1 %35 to i32
  %37 = load i64, i64* %1, align 8
  %38 = call i32 (i32, i8*, ...) @ok(i32 %36, i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.2, i64 0, i64 0), i64 %37)
  %39 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %40 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %39, i32 0, i32 0
  %41 = load i64, i64* %40, align 8
  store i64 %41, i64* %3, align 8
  %42 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %43 = getelementptr inbounds %struct.TYPE_8__, %struct.TYPE_8__* %42, i32 0, i32 1
  %44 = load %struct.TYPE_9__*, %struct.TYPE_9__** %43, align 8
  %45 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %44, i64 0
  store %struct.TYPE_9__* %45, %struct.TYPE_9__** %7, align 8
  %46 = load i64, i64* %3, align 8
  %47 = icmp sgt i64 %46, 0
  %48 = zext i1 %47 to i32
  %49 = call i32 (i32, i8*, ...) @ok(i32 %48, i8* getelementptr inbounds ([36 x i8], [36 x i8]* @.str.3, i64 0, i64 0))
  store i64 0, i64* %4, align 8
  br label %50

50:                                               ; preds = %68, %0
  %51 = load i64, i64* %4, align 8
  %52 = load i64, i64* %3, align 8
  %53 = icmp slt i64 %51, %52
  br i1 %53, label %54, label %71

54:                                               ; preds = %50
  %55 = load i64, i64* %4, align 8
  %56 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %57 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %56, i32 0, i32 0
  %58 = load i64, i64* %57, align 8
  %59 = icmp eq i64 %55, %58
  %60 = zext i1 %59 to i32
  %61 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %62 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %61, i32 0, i32 0
  %63 = load i64, i64* %62, align 8
  %64 = load i64, i64* %4, align 8
  %65 = call i32 (i32, i8*, ...) @ok(i32 %60, i8* getelementptr inbounds ([32 x i8], [32 x i8]* @.str.4, i64 0, i64 0), i64 %63, i64 %64)
  %66 = load %struct.TYPE_9__*, %struct.TYPE_9__** %7, align 8
  %67 = getelementptr inbounds %struct.TYPE_9__, %struct.TYPE_9__* %66, i32 1
  store %struct.TYPE_9__* %67, %struct.TYPE_9__** %7, align 8
  br label %68

68:                                               ; preds = %54
  %69 = load i64, i64* %4, align 8
  %70 = add nsw i64 %69, 1
  store i64 %70, i64* %4, align 8
  br label %50

71:                                               ; preds = %50
  %72 = call i32 (...) @GetProcessHeap()
  %73 = load %struct.TYPE_8__*, %struct.TYPE_8__** %6, align 8
  %74 = call i32 @HeapFree(i32 %72, i32 0, %struct.TYPE_8__* %73)
  ret void
}

declare dso_local %struct.TYPE_8__* @HeapAlloc(i32, i32, i64) #1

declare dso_local i32 @GetProcessHeap(...) #1

declare dso_local i64 @pNtQuerySystemInformation(i32, %struct.TYPE_8__*, i64, i64*) #1

declare dso_local i32 @ok(i32, i8*, ...) #1

declare dso_local %struct.TYPE_8__* @HeapReAlloc(i32, i32, %struct.TYPE_8__*, i64) #1

declare dso_local i32 @HeapFree(i32, i32, %struct.TYPE_8__*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
